--- a/config/install/achievements.settings.yml
+++ b/config/install/achievements.settings.yml
@@ -1,8 +1,8 @@
-achievements_image_hidden: null
-achievements_leaderboard_count_per_page: 10
-achievements_leaderboard_relative: nearby_ranks
-achievements_leaderboard_relative_nearby_ranks: 2
-achievements_leaderboard_block_count_top: 5
-achievements_leaderboard_block_relative: nearby_ranks
-achievements_leaderboard_block_relative_nearby_ranks: 1
-achievements_unlocked_move_to_top: true
+image_hidden: null
+leaderboard_count_per_page: 10
+leaderboard_relative: nearby_ranks
+leaderboard_relative_nearby_ranks: 2
+leaderboard_block_count_top: 5
+leaderboard_block_relative: nearby_ranks
+leaderboard_block_relative_nearby_ranks: 1
+unlocked_move_to_top: true
