--- a/achievements.links.action.yml
+++ b/achievements.links.action.yml
@@ -1,6 +1,6 @@
-entity.achievement_type.add_form:
-  route_name: 'entity.achievement_type.add_form'
-  title: 'Add Achievement type'
+entity.achievement_entity.add_form:
+  route_name: entity.achievement_entity.add_form
+  title: 'Add Achievement entity'
   appears_on:
-    - entity.achievement_type.collection
+    - entity.achievement_entity.collection
 
