--- a/achievements.links.menu.yml
+++ b/achievements.links.menu.yml
@@ -3,10 +3,11 @@ achievements.config:
   parent: user.admin_index
   description: 'Configure the achievements system.'
   route_name: achievements.admin
-# Achievement type menu items definition
-entity.achievement_type.collection:
-  title: 'Achievement type'
-  route_name: entity.achievement_type.collection
-  description: 'List Achievement type'
-  parent: achievements.admin 
+# Achievement entity menu items definition
+entity.achievement_entity.collection:
+  title: 'Achievement Types'
+  route_name: entity.achievement_entity.collection
+  description: 'List Achievement entity (bundles)'
+  parent: system.admin_structure
+  weight: 99
 
