--- a/achievements.routing.yml
+++ b/achievements.routing.yml
@@ -5,3 +5,12 @@ achievements.admin:
     _title: 'Administer achievements'
   requirements:
     _permission: 'administer achievements'
+
+achievements.achievements_controller_userAchievements:
+  path: '/user/{user}/achievements'
+  defaults:
+    _controller: '\Drupal\achievements\Controller\AchievementsController::userAchievements'
+    _title_callback: '\Drupal\achievements\Controller\AchievementsController::userAchievementsTitle'
+  requirements:
+    _permission: 'access content'
+    user: \d+
