--- a/config/install/views.view.achievement_totals.yml
+++ b/config/install/views.view.achievement_totals.yml
@@ -1,15 +1,17 @@
-  langcode: en
+langcode: en
 status: true
 dependencies:
+  config:
+    - system.menu.main
   module:
     - achievements
     - user
-id: achievements_leaderboard
-label: Achievements Leaderboard
+id: achievement_totals
+label: 'Achievement Totals'
 module: views
 description: ''
 tag: ''
-base_table: users_field_data
+base_table: achievement_totals
 base_field: uid
 core: 8.x
 display:
@@ -20,9 +22,8 @@ display:
     position: 0
     display_options:
       access:
-        type: perm
-        options:
-          perm: 'access user profiles'
+        type: none
+        options: {  }
       cache:
         type: tag
         options: {  }
@@ -47,7 +48,7 @@ display:
       pager:
         type: mini
         options:
-          items_per_page: 10
+          items_per_page: 25
           offset: 0
           id: 0
           total_pages: null
@@ -64,46 +65,74 @@ display:
             next: ››
       style:
         type: table
-        options:
-          grouping: {  }
-          row_class: ''
-          default_row_class: true
-          override: true
-          sticky: false
-          caption: ''
-          summary: ''
-          description: ''
-          columns:
-            name: name
-            points: points
-          info:
-            name:
-              sortable: false
-              default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-            points:
-              sortable: false
-              default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-          default: '-1'
-          empty_table: false
       row:
         type: fields
       fields:
-        name:
-          id: name
-          table: users_field_data
-          field: name
+        uid:
+          id: uid
+          table: achievement_totals
+          field: uid
           relationship: none
           group_type: group
           admin_label: ''
-          label: 'User Name'
+          label: 'User ID'
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          set_precision: false
+          precision: 0
+          decimal: .
+          separator: ','
+          format_plural: false
+          format_plural_string: !!binary MQNAY291bnQ=
+          prefix: ''
+          suffix: ''
+          plugin_id: numeric
+        counter:
+          id: counter
+          table: views
+          field: counter
+          relationship: none
+          group_type: group
+          admin_label: Rank
+          label: '#'
           exclude: false
           alter:
             alter_text: false
@@ -123,8 +152,58 @@ display:
             target: ''
             nl2br: false
             max_length: 0
-            word_boundary: false
-            ellipsis: false
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          counter_start: 1
+          plugin_id: counter
+        name:
+          id: name
+          table: users_field_data
+          field: name
+          relationship: uid
+          group_type: group
+          admin_label: ''
+          label: Who
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: true
+            path: 'user/{{ uid }}/achievements'
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
             more_link: false
             more_link_text: ''
             more_link_path: ''
@@ -147,7 +226,7 @@ display:
           click_sort_column: value
           type: user_name
           settings:
-            link_to_entity: true
+            link_to_entity: false
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -218,14 +297,14 @@ display:
           prefix: ''
           suffix: ''
           plugin_id: numeric
-        unlocks:
-          id: unlocks
+        latest_achievement:
+          id: latest_achievement
           table: achievement_totals
-          field: unlocks
+          field: latest_achievement
           relationship: none
           group_type: group
           admin_label: ''
-          label: 'Achievement Unlocks'
+          label: 'Latest achievement'
           exclude: false
           alter:
             alter_text: false
@@ -266,28 +345,21 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
-          set_precision: false
-          precision: 0
-          decimal: .
-          separator: ','
-          format_plural: false
-          format_plural_string: !!binary MQNAY291bnQ=
-          prefix: ''
-          suffix: ''
-          plugin_id: numeric
-      filters:
-        status:
-          value: '1'
-          table: users_field_data
-          field: status
-          plugin_id: boolean
-          entity_type: user
-          entity_field: status
-          id: status
+          plugin_id: latest_achievement
+      filters: {  }
+      sorts:
+        points:
+          id: points
+          table: achievement_totals
+          field: points
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: DESC
+          exposed: false
           expose:
-            operator: ''
-          group: 1
-      sorts: {  }
+            label: ''
+          plugin_id: standard
       title: Leaderboard
       header: {  }
       footer: {  }
@@ -297,6 +369,10 @@ display:
           id: uid
           table: achievement_totals
           field: uid
+          relationship: none
+          group_type: group
+          admin_label: User
+          required: true
           plugin_id: standard
       arguments: {  }
       display_extenders: {  }
@@ -306,7 +382,6 @@ display:
         - 'languages:language_content'
         - 'languages:language_interface'
         - url.query_args
-        - user.permissions
       tags: {  }
   page_1:
     display_plugin: page
@@ -315,12 +390,20 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
-      path: leaderboard
+      path: achievements/leaderboard
+      menu:
+        type: normal
+        title: 'Achievements Leaderboard'
+        description: ''
+        expanded: false
+        parent: ''
+        weight: 0
+        context: '0'
+        menu_name: main
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
         - url.query_args
-        - user.permissions
       tags: {  }
